refactor: Enhancement in deleteCustomers and updateCustomer controllers
