# src/modules/customers/customersRoutes.ts
@@ -3,7 +3,9 @@ import { authenticateUser } from '@modules/login/middlewares/auth';
 import { validateUpdateCustomerData } from '@modules/customers/middlewares/customers';
 import { 
   getAllCustomers,
-  getCustomerById
+  getCustomer,
+  updateCustomer,
+  deleteCustomers
 } from './controllers/customerHandlers';
 
 const router = Router();
@@ -12,10 +14,10 @@ router.use(authenticateUser);
 
 router.get('/customers/page/:page/pageSize/:pageSize', getAllCustomers);
 
-router.get('/customers/:id', getCustomerById);
+router.get('/customers/:id', getCustomer);
 
-//router.put('/customers/update/:id', validateUpdateCustomerData, updateCustomerById);
+router.put('/customers/update/:id', validateUpdateCustomerData, updateCustomer);
 
-//router.delete('/customers/delete/:id', deleteCustomersByIds);
+router.delete('/customers/delete/:ids', deleteCustomers);
 
 export default router;
